--- a/SCS3251/mod2/3251-Hussary_Elias_A2.ipynb
+++ b/SCS3251/mod2/3251-Hussary_Elias_A2.ipynb
@@ -45,17 +45,12 @@
    "source": [
     "### 2.28 - Socks in a drawer.\n",
     "In your sock drawer you have 4 blue, 5 gray, and 3 black socks. Half asleep one morning you grab 2 socks at random and put them on. \n",
-    "Find the probability you end up wearing;\n",
-    "* (a) 2 blue socks \n",
-    "* (b) no gray socks \n",
-    "* (c) at least 1 black sock \n",
-    "* (d) a green sock \n",
-    "* (e) matching socks"
+    "Find the probability you end up wearing;\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +59,7 @@
        "'Total Socks = 12'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,8 +74,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**a) 2 blue socks**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -89,15 +91,14 @@
        "'P = 9.09%'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# a) blue socks\n",
-    "p_first_blue = 4 / 12\n",
-    "p_second_blue = 3 / 11\n",
+    "p_first_blue = blue_socks / total_socks\n",
+    "p_second_blue = (blue_socks - 1) / (total_socks - 1)\n",
     "\n",
     "p_two_blue = p_first_blue * p_second_blue\n",
     "f'P = {p_two_blue:.2%}'"
@@ -109,19 +110,20 @@
    "source": [
     "\\begin{equation*}\n",
     "P(Blue1, Blue2)   = \\frac{4}{12} \\times \\frac{3}{11} = \\frac{12}{132} = 9.09\\%\n",
-    "\\end{equation*}"
+    "\\end{equation*}\n",
+    "The probability of wearing two blue socks is **9.09%**."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) The probability of wearing two blue socks is **9.09%**."
+    "**b) no gray socks**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -130,15 +132,15 @@
        "'P = 31.82%'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# b) no gray socks\n",
-    "p_first_no_gray = 7 / 12\n",
-    "p_second_no_gray = 6 / 11\n",
+    "non_gray_socks = blue_socks + black_socks\n",
+    "p_first_no_gray =  non_gray_socks / total_socks\n",
+    "p_second_no_gray = (non_gray_socks - 1) / (total_socks - 1)\n",
     "\n",
     "p_no_gray = p_first_no_gray * p_second_no_gray\n",
     "f'P = {p_no_gray:.2%}'"
@@ -150,14 +152,139 @@
    "source": [
     "\\begin{equation*}\n",
     "P(NoGray1, NoGray2)   = \\frac{7}{12} \\times \\frac{6}{11} = \\frac{42}{132} = 31.82\\%\n",
-    "\\end{equation*}"
+    "\\end{equation*}\n",
+    "\n",
+    "The probability of wearing no gray socks is **31.82%**."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) The probability of wearing no gray socks is **31.82%**."
+    "**c) at least one black sock**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'P = 25.00%'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_one_black_sock = black_socks / total_socks\n",
+    "f'P = {p_one_black_sock:.2%}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation*}\n",
+    "P(OneBlackSock)   = \\frac{3}{12} = 25.00\\%\n",
+    "\\end{equation*}\n",
+    "\n",
+    "The probability of wearing one black sock is **25.00%**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**d) a green sock**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'P = 0.00%'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_one_green_sock = 0 / total_socks\n",
+    "f'P = {p_one_green_sock:.2%}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation*}\n",
+    "P(OneGreenSock)   = \\frac{0}{12} = 00.00\\%\n",
+    "\\end{equation*}\n",
+    "\n",
+    "The probability of wearing one green sock is **00.00%**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**e) a pair of socks**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'P = 28.79%'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_two_blue # see a)\n",
+    "\n",
+    "p_two_gray = (gray_socks / total_socks) * ((gray_socks - 1) / (total_socks -1))\n",
+    "p_two_black = (black_socks / total_socks) * ((black_socks - 1) / (total_socks - 1))\n",
+    "\n",
+    "p_pair = p_two_blue + p_two_gray + p_two_black\n",
+    "f'P = {p_pair:.2%}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation*}\n",
+    "P(Blue1, Blue2)  + P(Gray1, Gray2) + P(Black1, Black2) \n",
+    "\\\\\n",
+    "= (\\frac{4}{12} \\times \\frac{3}{11} ) \n",
+    "+ (\\frac{5}{12} \\times \\frac{4}{11} ) \n",
+    "+ (\\frac{3}{12} \\times \\frac{2}{11} ) \n",
+    "\\\\ \n",
+    "= \\frac{12}{132} + \\frac{20}{132} + \\frac{6}{132}\n",
+    "\\\\\n",
+    "= \\frac{38}{132} = 28.79\\%\n",
+    "\\end{equation*}\n",
+    "\n",
+    "The probability of wearing one pair of socks is **28.79%**."
    ]
   },
   {
